--- a/Parks data cleaning/bimler_code_data_wrangle.Rmd
+++ b/Parks data cleaning/bimler_code_data_wrangle.Rmd
@@ -15,15 +15,14 @@ library(tidyverse)
 wir_focals_dat <- read.csv("focals/wir fitness(WIR diverse focals).csv")
 wir_neighborhoods_data <- read.csv("neighborhoods/wir fitness(WIR neighborhoods).csv")
 
-# br_focals_dat <- read.csv("~/Documents/REU/parks data/focals/br fitness(BR diverse focals).csv")
-# br_neighborhoods_data <- read.csv("~/Documents/REU/parks data/neighborhoods/br fitness(BR neighborhoods).csv")
+br_focals_dat <- read.csv("focals/br fitness(BR diverse focals).csv")
+br_neighborhoods_data <- read.csv("neighborhoods/br fitness(BR neighborhoods).csv")
 
 sem_focals_dat <- read.csv("focals/sem fitness(SEM diverse focals.csv")
 sem_neighborhoods_data <- read.csv("neighborhoods/sem fitness(sem neighborhoods).csv")
 
-
-# rf_focals_dat <- read.csv("~/Documents/REU/parks data/focals/riverfront fitness(Riverfront Diverse focals).csv")
-# rf_neighborhoods_data <- read.csv("~/Documents/REU/parks data/neighborhoods/riverfront fitness(RIVERFRONT neighborhoods.csv")
+rf_focals_dat <- read.csv("focals/riverfront fitness(Riverfront Diverse focals).csv")
+rf_neighborhoods_data <- read.csv("neighborhoods/riverfront fitness(RIVERFRONT neighborhoods.csv")
 
 ```
 
@@ -41,15 +40,15 @@ fix_col_names <- function(data){
 
 wir_neighborhoods_data <- fix_col_names(wir_neighborhoods_data)
 sem_neighborhoods_data <- fix_col_names(sem_neighborhoods_data)
-
-# rf_neighborhoods_data <- fix_col_names(rf_neighborhoods_data)
-# br_neighborhoods_data <- fix_col_names(br_neighborhoods_data)
+rf_neighborhoods_data <- fix_col_names(rf_neighborhoods_data)
+br_neighborhoods_data <- fix_col_names(br_neighborhoods_data)
 
 # filtering the neighborhoods so that we keep only the ones that have focal collects 
   # to be merged with the focal data
 sem_neighbors_filtered <- sem_neighborhoods_data[sem_neighborhoods_data$`focal collect?` == "Y", ]
 # wir doesn't have a 'focal collect' column
-
+# rf also doesn't have a 'focal collect' column
+# unique(br_neighborhoods_data$`focal collect?`), br focal collect column is just blanks ("")
 ```
 
 # cleaning the TOPFR and SIDEFR columns' counts into one column
@@ -124,6 +123,41 @@ colnames(wir_focals_dat)
   # EXACTFR = The EPIDEN fruit counts
   # TOPFR, SIDEFR is the top and side counts for NAVSQU and COLLOM
 
+# attempting to create a function to do everything that I did above
+
+update_fruit_counts <- function(data, species_to_update, calculate_new_fruit_count){
+  
+  # 1. filtering for NAV and COLLOM
+  species_data <- data[data$SPECIES %in% species_to_update, ]
+  
+  # 2. Apply function to create "average_fruits" column
+  species_data$average_fruits <- sapply(1:nrow(species_data), function(row) calculate_new_fruit_count(row, species_data))
+  
+  # 3. create "fruits" column using coalesce to combine fruit counts
+  species_data <- species_data %>% 
+    mutate(fruits = coalesce(average_fruits, EXACTFR, TOTALFR))
+  
+  # 4. remove NAv and COLLOM from og dataset
+  data_no_nav_collom <- data[!data$SPECIES %in% species_to_update, ]
+  
+  # 5. Coalesce "fruits" for the rest of the species
+  data_no_nav_collom <- data_no_nav_collom %>% mutate(fruits = coalesce(EXACTFR, TOTALFR))
+  
+  # 6. select only relevant columns for merging/want to keep
+  columns_to_keep <- c("PLOT", "SPECIES", "PLOT.1", "SUBPLOT", "fruits", "PARK")
+  species_data <- species_data %>%  select(all_of(columns_to_keep))
+  data_no_nav_collom <- data_no_nav_collom %>% select(all_of(columns_to_keep))
+  
+  # 7. LAST STEP: combining updated data
+  updated_data <- rbind(data_no_nav_collom, species_data)
+  
+  return(updated_data)
+  
+}
+
+
+# function on wir data! 
+wir_updated_focals <- update_fruit_counts(wir_focals_dat, nav_and_collom, calculate_new_fruit_count)
 
 
 
@@ -131,34 +165,23 @@ colnames(wir_focals_dat)
 
 
 
-# RF changing fruit counts (skipping for time being to focus on getting 1 complete datafrme for SEM)
+# RF changing fruit counts
 ```{r}
 ###############
 ### RF -- need to also changing FR1 to TOTAL FR
 #############
+  # new name = old name
+rf_focals_dat <- rf_focals_dat %>% rename(TOTALFR = FR1)
+rf_updated_focals <- update_fruit_counts(rf_focals_dat, nav_and_collom, calculate_new_fruit_count)
 
-
-
-# nav_and_collom_alone <-  rf_focals_dat[rf_focals_dat$SPECIES %in% nav_and_collom, ]
-# 
-# # applying function to the filtered nav/collom dataset
-# nav_and_collom_alone$average_fruits <- sapply(1:nrow(nav_and_collom_alone), function(row) calculate_new_fruit_count(row, nav_and_collom_alone))
-# 
-# # Merge the new column back to the original dataframe
-# rf_focals_dat <- merge(rf_focals_dat, nav_and_collom_alone[, c("SPECIES", "average_fruits")], by = "SPECIES", all.x = TRUE)
-# 
-# # combining fruits columns into one
-# rf_focals_dat <- rf_focals_dat %>%
-#   mutate(fruits = coalesce(average_fruits, EXACTFR, FR1))
 ```
 
-#BR changing fruit counts (skipping for time being to focus on getting 1 complete datafrme for SEM)
+#BR changing fruit counts
 ```{r}
-# # creating a new column to use the fruit counts instead of the inflorescence count
-# br_focals_dat$average_fruits <- rowMeans(br_focals_dat[, c('TOPFR', 'SIDEFR')], na.rm = TRUE)
-# # combining fruits columns into one
-# br_focals_dat <- br_focals_dat %>%
-#   mutate(fruits = coalesce(average_fruits, EXACTFR, TOTAL.FR))
+# modifying TOTAL.FR to TOTALFR for fxn to work
+  # new name = old name
+br_focals_dat <- br_focals_dat %>% rename(TOTALFR = TOTAL.FR)
+br_updated_focals <- update_fruit_counts(br_focals_dat, nav_and_collom, calculate_new_fruit_count)
 
 ```
 
@@ -166,23 +189,28 @@ colnames(wir_focals_dat)
 # merging each respective focal df with neighborhood df on plot/subplot
 ```{r}
 
-# neighborhood_focal_wir <- merge(wir_neighborhoods_data, wir_focals_dat, by = c("PLOT.1", "SUBPLOT"))
+# want to merge on all common columns to reduce chances of repeats
+
+merge_neighbor_fitness <- function(focal_data, neighborhood_data){
+  
+  common_cols <- intersect(colnames(focal_data), colnames(neighborhood_data))
+  neighborhood_focal <- merge(neighborhood_data, focal_data, by = c(common_cols))
+
+  return (neighborhood_focal)
+  
+}
+
+neighborhood_focal_br <- merge_neighbor_fitness(br_updated_focals, br_neighborhoods_data)
+neighborhood_focal_rf <- merge_neighbor_fitness(rf_updated_focals, rf_neighborhoods_data)
+neighborhood_focal_wir <- merge_neighbor_fitness(wir_updated_focals, wir_neighborhoods_data)
 
 
-# want to merge on all common columns to reduce chances of repeats?
-
-common_cols <- intersect(colnames(sem_focals_dat), colnames(sem_neighborhoods_data))
-
-print(colnames(sem_focals_dat))
-print(colnames(sem_neighborhoods_data))
-print(common_cols)
-
-neighborhood_focal_sem <- merge(sem_neighbors_filtered, sem_updated_focals, by = c(common_cols))
-
-
-
-# neighborhood_focal_rf <- merge(rf_neighborhoods_data, rf_focals_dat, by = c("PLOT.1", "SUBPLOT"))
-# neighborhood_focal_br <- merge(br_neighborhoods_data, br_focals_dat, by = c("PLOT.1", "SUBPLOT"))
+# common_cols <- intersect(colnames(sem_focals_dat), colnames(sem_neighborhoods_data))
+# print(colnames(sem_focals_dat))
+# print(colnames(sem_neighborhoods_data))
+# print(common_cols)
+  # it's sem_neighbors_filtered bc they had the 'Y' or 'N' focals collect column (the rest of the datasets don't have this so using the og neighborhood data for the rest)
+# neighborhood_focal_sem <- merge(sem_neighbors_filtered, sem_updated_focals, by = c(common_cols))
 
 ```
 
@@ -193,10 +221,6 @@ neighborhood_focal_sem <- merge(sem_neighbors_filtered, sem_updated_focals, by =
 # KEEPING A PLOT COLUMN
 
 neighborhood_focal_sem <- neighborhood_focal_sem %>% select(-PARK, -PLOT.1, -SUBPLOT, -`focal collect?`)
-
-# renaming PLOT.y to PLOT to be able to merge with the alones
-#neighborhood_focal_sem <- neighborhood_focal_sem %>% rename(PLOT )
-
 
 # need to alphabetize 
 neighborhood_focal_sem <- neighborhood_focal_sem %>% arrange(SPECIES)
@@ -225,7 +249,59 @@ neighborhood_focal_sem[neighborhood_focal_sem == ''] <- 0
 
 ```
 
-# adding in the alones 
+
+## encapsulating above into a function 
+```{r}
+
+clean_neighborhood_focal <- function(data){
+  # # cleaning data into final format to match the simul_data from Bimler
+  
+  # 1. remove unnecessary columns
+  if ("`focal collect?`" %in% colnames(data)){
+      data <- data %>%
+    select(-PARK, -PLOT.1, -SUBPLOT, -`focal collect?`)
+  } else {
+    data <- data %>%
+      select(-PARK, -PLOT.1, -SUBPLOT)
+             }
+
+  
+  # 2. sort by SPECIES column (get into alphabetical order)
+  data <- data %>%
+    arrange(SPECIES)
+  
+  # 3. rename SPECIES to focal and fruits to seeds
+  data <- data %>%
+    rename(focal = SPECIES, seeds = fruits)
+  
+  # 4. Remove rows without a final fruit count
+  data <- data %>%
+    filter(!is.na(seeds))
+  
+  # 5. reorder columns to put focal, seeds, and PLOT at front
+  columns_to_exclude <- c("focal", "seeds", "PLOT")
+  remaining_columns <- setdiff(names(data), columns_to_exclude)
+  sorted_columns <- remaining_columns[order(remaining_columns)]
+  # Combine the specified columns with the sorted columns
+  new_order <- c(columns_to_exclude, sorted_columns)
+  # Reorder the data frame
+  data <- data %>%
+    select(all_of(new_order))
+  
+  # 6. replace empty cells with 0
+  data[data == ''] <- 0
+  
+  return (data)
+}
+
+
+neighborhood_focal_br <- clean_neighborhood_focal(neighborhood_focal_br)
+neighborhood_focal_wir <- clean_neighborhood_focal(neighborhood_focal_wir)
+neighborhood_focal_rf <- clean_neighborhood_focal(neighborhood_focal_rf)
+```
+
+
+# ADDING ALONES
 ## zeroing out in weeds, seed counts, species
 
 # also keep the PLOT column for alones, then for the rest of the entries mark them as diverse?
